# default-args.rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  clippy.yml  coverage.yml  fmt.yml  test.yml
examples/: README.md
examples/basic/: .gitignore  Cargo.toml  README.md
examples/basic/src/: main.rs
examples/config/: Cargo.toml  README.md
examples/config/src/: main.rs
src/: lib.rs
tests/: basic_test.rs  complicated.rs  complicated_test.rs  export_test.rs  path_test.rs
