[package]
name = "default-args"
version = "1.0.0-beta"
edition = "2018"
authors = ["Jaeyong Sung <jaeyong0201@gmail.com>"]
license = "MIT"
readme = "README.md"
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE"
]
homepage = "https://github.com/buttercrab/default-args.rs"
repository = "https://github.com/buttercrab/default-args.rs"
description = "zero-cost default arguments in rust"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }

[dev-dependencies]
tokio-test = "*"

